--- a/app/src/main/res/layout/activity_alarmasmain.xml
+++ b/app/src/main/res/layout/activity_alarmasmain.xml
@@ -1,108 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2b2b2b"
-    android:backgroundTint="#2b2b2b"
+    android:padding="16dp"
     tools:context=".alarmasmain">
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="289dp"
-        android:layout_height="122dp"
-        android:fontFamily="@font/baloo_da"
-        android:text="ALARMAS    Y NOTIFICACIONES"
-        android:textColor="#F4EFEF"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
-        app:layout_constraintStart_toStartOf="parent"
+    <!-- Reloj digital en la parte superior -->
+    <DigitalClock
+        android:id="@+id/digitalClock"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
+    <!-- TextViews para mostrar la fecha y hora seleccionadas -->
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/textViewFechaSeleccionada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/baloo_da"
-        android:text="HABITOS"
-        android:textColor="#F4EFEF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintTop_toBottomOf="@+id/digitalClock"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textViewHoraSeleccionada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/baloo_da"
-        android:text="TROFEOS"
-        android:textColor="#EFECEC"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.867"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFechaSeleccionada"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96" />
-
-    <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="122dp"
-        android:layout_height="121dp"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.982"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062"
-        app:srcCompat="@drawable/reloj" />
+        android:layout_marginTop="8dp"/>
 
-    <ImageButton
-        android:id="@+id/Habitos"
-        android:layout_width="99dp"
-        android:layout_height="117dp"
-        android:backgroundTint="#2b2b2b"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869"
-        app:srcCompat="@drawable/regando_plantas" />
-
-    <ImageButton
-        android:id="@+id/Trofeo"
-        android:layout_width="100dp"
-        android:layout_height="117dp"
-        android:backgroundTint="#2b2b2b"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869"
-        app:srcCompat="@drawable/trofeo_deportivo" />
-
+    <!-- Botón para seleccionar la fecha y hora -->
     <Button
-        android:id="@+id/selectTimeButton"
+        android:id="@+id/btnSeleccionarFechaHora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Seleccionar Fecha y Hora"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHoraSeleccionada"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
+    <!-- Botón para guardar la alarma -->
+    <Button
+        android:id="@+id/btnGuardarAlarma"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Guardar Alarma"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarFechaHora"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
