--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,5 +5,6 @@
         <item>@font/baloo_bhai</item>
         <item>@font/baloo_da</item>
         <item>@font/balsamiq_sans</item>
+        <item>@font/days_one</item>
     </array>
 </resources>
