--- a/app/src/main/res/layout/activity_comunesmain.xml
+++ b/app/src/main/res/layout/activity_comunesmain.xml
@@ -53,4 +53,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.078"
         app:srcCompat="@drawable/pvz_removebg_preview" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaComunes"
+        android:layout_width="409dp"
+        android:layout_height="355dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.537" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
