--- a/app/src/main/res/layout/activity_fruterasmain.xml
+++ b/app/src/main/res/layout/activity_fruterasmain.xml
@@ -37,6 +37,7 @@
         app:srcCompat="@drawable/pvz_fru_removebg_preview" />
 
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="408dp"
         android:layout_height="149dp"
         android:orientation="horizontal"
@@ -54,4 +55,15 @@
             android:layout_weight="1"
             app:srcCompat="@drawable/systems_and_technology_programming_company_logo" />
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ListaFruteras"
+        android:layout_width="409dp"
+        android:layout_height="366dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.586" />
 </androidx.constraintlayout.widget.ConstraintLayout>
